# rwkv-android-notes

./: .gitignore  README.md  Wireframe.html  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.example.rwkvnotes.data.local.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/config/: app_config.toml
app/src/main/cpp/: CMakeLists.txt  native_rwkv_bridge.cpp  rwkv_engine_stub.cpp
app/src/main/infer/: CMakeLists.txt
app/src/main/infer/cpp/: native_rwkv_bridge.cpp  rwkv_engine_core.cpp  rwkv_engine_core.h  rwkv_engine_real_adapter.cpp  rwkv_real_backend.cpp  rwkv_real_backend.h  rwkv_sampler.cpp  rwkv_sampler.h  rwkv_tokenizer.cpp  rwkv_tokenizer.h  rwkv_weight_loader.cpp  rwkv_weight_loader.h
app/src/main/java/com/example/rwkvnotes/: MainActivity.kt  RwkvNotesApp.kt
app/src/main/java/com/example/rwkvnotes/ai/: AiProcessor.kt  AiService.kt  InferenceResultPostProcessor.kt  ModelEngineReloader.kt  NativeRwkvBridge.kt  PromptAssembler.kt
app/src/main/java/com/example/rwkvnotes/ai/protocol/: InferenceProtocol.kt
app/src/main/java/com/example/rwkvnotes/config/: AppConfig.kt  AppConfigLoader.kt  InferenceSettingsStore.kt
app/src/main/java/com/example/rwkvnotes/data/local/: AppDatabase.kt  NoteDao.kt  NoteEntity.kt  NoteWithTags.kt
app/src/main/java/com/example/rwkvnotes/di/: AppModule.kt
app/src/main/java/com/example/rwkvnotes/index/: SemanticIndexService.kt
app/src/main/java/com/example/rwkvnotes/infer/: InferenceRuntime.kt  NativeRwkvBridge.kt
app/src/main/java/com/example/rwkvnotes/ingest/: DocumentIngestionPipeline.kt
app/src/main/java/com/example/rwkvnotes/model/: DefaultModelManager.kt  ModelDownloadWorker.kt  ModelFormatSupport.kt  ModelImportFileNaming.kt  ModelManager.kt  ModelRuntimeCoordinator.kt  ModelTaskScheduler.kt
app/src/main/java/com/example/rwkvnotes/note/: NoteRepository.kt  NoteViewModel.kt
app/src/main/java/com/example/rwkvnotes/obs/: InferenceMetricsService.kt
app/src/main/java/com/example/rwkvnotes/orchestrator/: InferenceTaskOrchestrator.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/rwkvnotes/ai/: InferenceProtocolTest.kt  InferenceResultPostProcessorTest.kt  InferenceValidationTest.kt  PromptAssemblerTest.kt
app/src/test/java/com/example/rwkvnotes/config/: AppConfigTomlParserTest.kt
app/src/test/java/com/example/rwkvnotes/model/: ModelFormatSupportTest.kt  ModelImportFileNamingTest.kt  ModelRuntimeCoordinatorTest.kt
app/src/test/java/com/example/rwkvnotes/note/: InferenceSettingsDraftParserTest.kt
docs/: engine_spec.md  error_codes.md  perf_baseline.md  release_gate.md  tokenizer_spec.md
scripts/: run_all_tests.sh  setup_local_properties.sh
